# diku.OptionsPricing

./: .gitignore  CMakeLists.txt  README.md  diku.OptionsPricing.sln
common/: Args.hpp  Arrays.hpp  Common.vcxproj  Common.vcxproj.filters  CudaInterop.h  Domain.hpp  FormattedOptions.hpp  FutharkArrays.hpp  Option.hpp  OptionConstants.hpp  Options.hpp  Real.hpp  Yield.hpp
cuda/: Cuda.vcxproj  CudaDomain.cuh  CudaErrors.cuh  CudaMain.cu  FormattedOptions.hpp  Makefile  ScanKernels.cu.h  ScanKernels.cuh
cuda-multi/: CudaMulti.vcxproj  CudaMultiMain.cu  Kernel.cuh  Makefile  Version1.cuh  Version2.cuh  Version3.cuh  compare.sh  test.sh
cuda-option/: CudaOption.cu  CudaOption.cuh  CudaOption.vcxproj  CudaOptionMain.cu  Kernel.cuh  Makefile  Version1.cuh  Version2.cuh  Version3.cuh  compare.sh  test.sh
cuda-option-scatter/: CudaOption.cuh  CudaOptionMain.cu  Makefile
data/: 0_UNIFORM_1000.in  0_UNIFORM_10000.in  0_UNIFORM_30000.in  10_RAND_HEIGHT_IN_50-500.in  11_RAND_HEIGHT_IN_100-300.in  12_RAND_HEIGHT_IN_100-700.in  1_RAND.in  1_RAND_1000.in  1_RAND_10000.in  1_RAND_30000.in  2_RANDCONSTHEIGHT.in  2_RANDCONSTHEIGHT_1000.in  2_RANDCONSTHEIGHT_10000.in  2_RANDCONSTHEIGHT_30000.in  3_RANDCONSTWIDTH.in  3_RANDCONSTWIDTH_1000.in  3_RANDCONSTWIDTH_10000.in  3_RANDCONSTWIDTH_30000.in  4_SKEWED.in  5_SKEWEDCONSTHEIGHT.in  6_SKEWEDCONSTWIDTH.in  7_RAND_HEIGHT_IN_0-3500.in  8_RAND_HEIGHT_IN_0-1200.in  9_RAND_HEIGHT_IN_50-250.in  Data_plots.ipynb  book.in  compare.fut  convert.fut  mix-lg-sm.in  (+9 more)
data-generator/: Makefile  RandomDataGenerator.cpp  RandomDataGenerator.vcxproj
(+156 files in other folders)
